# xvault

./: .gitignore  .xvault  LICENSE  README.md  p.py  pyproject.toml
.xvault/: config
src/xvault/: __init__.py  __main__.py  model.py  xvault.py  xvaultstore.py
tests/: test.env  test.jsonc  test.md  test.xml  test.yaml
